Lab5: Docker Compose MySQL + Node + phpMyAdmin

--- a/lab 5 - Docker Compose/docker-compose.yml
+++ b/lab 5 - Docker Compose/docker-compose.yml
@@ -23,9 +23,17 @@ services:
       DB_NAME: mydb
     depends_on:
       - db
-    volumes:
-      - ./app:/usr/src/app          # bind mount кода
-      - /usr/src/app/node_modules   # анонимный volume защищает node_modules
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    ports:
+      - "8080:80"              # UI на localhost:8080
+    environment:
+      PMA_HOST: db             # имя сервиса MySQL
+      PMA_USER: user
+      PMA_PASSWORD: userpass
+    depends_on:
+      - db
 
 volumes:
   db_data:                       # named volume для MySQL
